--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(app)
 add_subdirectory(glad)
 add_subdirectory(show-information)
 add_subdirectory(simple-app)
+add_subdirectory(yuv-app)
